--- a/data/sample.html
+++ b/data/sample.html
@@ -12,6 +12,9 @@
     <div class="imran">
         hi this is also imran
     </div>
+    <div class="imran2">
+        hi this is also imran
+    </div>
 
     <a href="http://www.google.com">google</a>
     <a href="http://www.facebook.com">facebook</a>
