find parents,childrens

--- a/data/sample.html
+++ b/data/sample.html
@@ -28,5 +28,10 @@
         </ul>
     </span>
 
+    <div class="container">
+        <li class="box">box</li>
+        <li class="box">box</li>
+        <li class="box">box</li>
+    </div>
 </body>
 </html>
